--- a/src/comps/home-page/home-page.css
+++ b/src/comps/home-page/home-page.css
@@ -7,7 +7,7 @@
   --first-color: #210554;
   --second-color: white;
 }
-@media screen and (min-width:720px){
+/* @media screen and (min-width:720px){ */
 
 .navbar{
     height: 15vh ;
@@ -47,29 +47,26 @@
 }
 .desk-part-1{
     background: url('../../img/desk-part-1.png');
-    height: 100vh;
 }
 .desk-part-2{
     background-image: url('../../img/Group 27128.png');
-    height: 210vh;
+    /* height: 210vh; */
     background-position: center;
     overflow-x: hidden;
     overflow-y: hidden;
   }
 .desk-part-3{
     background: url('../../img/desk-part-3.png');
-    height: 120vh;
     
 }
 .desk-part-4{
     background: url('../../img/part-4-update.png');
-    height: 270vh;
 }
 .desk-part-6, .desk-part-10{
   background-color: #FCF5F5;
 }
 .desk-part-6,.desk-part-7, .desk-part-8,.desk-part-9,.desk-part-10,.desk-part-11,.desk-part-12{
-  height: 95vh;
+  /* height: 95vh; */
 }
 .desk-part-8,.desk-part-12{
 background-color: #F1FEFF;
@@ -78,7 +75,7 @@ background-color: #F1FEFF;
 
 .desk-part-14{
   background: url('../../img/desk-part-7.png');
-  height: 100vh;
+  /* height: 100vh; */
 
 }
 .desk-part-1, .desk-part-2, .desk-part-3, .desk-part-4, .desk-part-14{
@@ -373,11 +370,11 @@ opacity: 1;
       color: #210554;
     }
     
-    .icon >ul>li>h3{
+    .icon >ul>li>p{
   
-      font-size: 30px !important;
+      font-size: 20px !important;
       font-weight: 400 !important;
-      margin-top: 10px !important;  
+      /* margin-top: 10px !important;   */
      }
     li{
       list-style-type: none;
@@ -411,7 +408,7 @@ opacity: 1;
       color: #57B3E1 !important;
      }
      .box img:nth-child(1),.funnel img, .hub img ,.time img ,.stories img,.quote img{
-      margin-top: 15vh;
+      /* margin-top: 15vh; */
      }
      .logo {
       margin-right: 0;
@@ -605,7 +602,7 @@ opacity: 1;
       border-radius: 25px;
       background-color: var(--first-color);
     }
-  }
+  
     @media screen and (max-height:641px){
       .mobile-part-1{
         /* height: 120vh !important; */
@@ -682,7 +679,7 @@ opacity: 1;
     height: 6vh;
     z-index: 3;
     position: fixed !important;
-    bottom:2vh;
+    /* bottom:2vh; */
     
   }
 
@@ -882,7 +879,7 @@ opacity: 1;
         height: 120vh;
       }
       .box img:nth-child(1) ,.time img{
-        margin-top: 0vh;
+        /* margin-top: 0vh; */
        }
        .box h3 {
          text-align: center;
