--- a/src/comps/home-page/home-page.css
+++ b/src/comps/home-page/home-page.css
@@ -12,7 +12,7 @@
     height: 15vh ;
 }
  
-.appointment, .read-more-about{
+.appointment,.read-more-about{
   border: 1px solid #FFFFFF;
   font: normal normal medium 17px/23px Roboto;
   border-radius: 5px;
@@ -20,24 +20,27 @@
   background-color: transparent;
   height: 6vh;
   }
+ 
   .read-more-about{
     background-color: #FF0686;
     border:none !important;
   }
 
 
-.appointment:focus{
+/* .call-icon:focus{
     outline: 0;
-  }
+  } */
 
 
-.appointment{
-  /* background-color: #210554; */
-  height: 6vh;
-  z-index: 3; 
-  /* position: fixed ;  */
-  bottom:2vh;
- 
+
+.call-icon{
+  z-index: 3;
+  position: fixed !important; 
+  bottom: 5vh;
+  right: 5vh;
+}
+.call-icon:hover{
+  opacity: 0.5;
 }
 
 .text{
@@ -348,11 +351,11 @@ opacity: 1;
     background-repeat: no-repeat;
 
   }
-  .screen-5{
+  /* .screen-5{
     height: 110vh;
     background: url('../../img/screen-5.png');
     background-repeat: no-repeat;
-  }
+  } */
   .screen-5 div{
     margin-top: 70vh;
   }
@@ -594,7 +597,7 @@ opacity: 1;
       100%{bottom: 0px}
     }
     .card-list-paper{
-      height: 35vh !important;
+      /* height: 35vh !important; */
     }
     .read-more{
       margin-top:2vh; 
@@ -621,7 +624,7 @@ opacity: 1;
     }
 
 .card-list-paper{
-  height: 35vh;
+  /* height: 35vh; */
 }
 .read-more{
   margin-top:2vh; 
@@ -675,14 +678,7 @@ opacity: 1;
     /* text-align: center; */
   }
   
-  .appointment{
-    background-color: #210554;
-    height: 6vh;
-    z-index: 3;
-    position: fixed !important;
-    /* bottom:2vh; */
-    
-  }
+  
 
   .our-method{
     text-align: center;
@@ -690,7 +686,7 @@ opacity: 1;
   }
   .mvp{
     font-weight:500;
-    font-size:700%;
+    ont-size:700%;
   }
  
   h2{
@@ -847,13 +843,13 @@ opacity: 1;
       width: 75%;
       }
       .desk-part-7,.desk-part-8,.desk-part-10{
-        height: 130vh;
+        /* height: 130vh; */
       }  
       .desk-part-7{
-        height: 150vh;
+        /* height: 150vh; */
       }  
       .desk-part-8,.desk-part-9,.desk-part-11,.desk-part-12{
-        height: 120vh;
+        /* height: 120vh; */
       }
       .box img:nth-child(1) ,.time img{
         /* margin-top: 0vh; */
@@ -922,11 +918,16 @@ background-color: #e4e8fc;
 .card-list-red{
 background-color: rgb(250, 231, 234);
 }
-.card-list-paper, .card-list-2, .card-list-yellow, .card-list-blue, .card-list-red{
+ .card-list-2, .card-list-yellow, .card-list-blue, .card-list-red{
 border:1px solid rgb(255, 255, 255);
 height: 38vh;
 margin-left: 0.5vw;
 }
+.card-list-paper{
+  border:1px solid rgb(255, 255, 255);
+  margin-left: 0.5vw;
+}
+
 .card-list-paper{
 background-color: #F1F1F1;
 
